--- a/2013/0528 colloquium Heidelberg/jan_kaspar_colloquium_heidelberg.tex
+++ b/2013/0528 colloquium Heidelberg/jan_kaspar_colloquium_heidelberg.tex
@@ -62,20 +62,26 @@
 
 \vfil
 
-\line{\hss\vbox{\hsize8cm
+\line{\hss\vbox{\hsize6cm
 \itindent5mm
-\bitm
-\itm Physics programme
-\itm Detector apparatus
-\> forward-proton measurement with Roman Pots
-\itm Analyses and results
-\> list the analyses here?
-\itm Outlook
-\itm Summary
-\eitm
+\BiggerFonts
+\noindent I) Physics programme
+
+\vskip2mm
+\noindent II) Detector apparatus
+%\> forward-proton measurement with Roman Pots
+
+\vskip2mm
+\noindent III) Analyses and results
+%\> list the analyses here?
+
+\vskip2mm
+\noindent IV) Upgrade plans
+
+\vskip2mm
+\noindent V) Summary
 }\hss}
 
-TODO: roman numerals
 
 \vfil
 \vfil
@@ -106,13 +112,10 @@ Forward hadronic phenomena at LHC
 
 \> xi ~ De eta
 
+\> non-diffractive event: exponential suppression of rapidity gaps
 
-\newpage %-------------------------------------------------------------------------------------------
-\title{}
+\fig*[,5cm]{fig/ppInteraction.png}
 
-(non-)diffractive interactions
-
-the classical plot -- colour vs. colourless exchange 
 
 \newpage %-------------------------------------------------------------------------------------------
 \title{}
@@ -133,11 +136,12 @@ the classical plot -- colour vs. colourless exchange
 
 
 \newpage %-------------------------------------------------------------------------------------------
-\title{LHC access points}
+\title{TOTEM at LHC}
 
-\line{\hss\fig*[,10cm]{fig/lhc.pdf}\hss}
+\line{\hss\fig*[,9cm]{fig/lhc.pdf}\hss}
 
-\> TOTEM shares IP with CMS --> collaboration possible
+\vfil
+\centerline{TOTEM shares IP with CMS $\Rightarrow$ collaboration possible}
 
 \newpage %-------------------------------------------------------------------------------------------
 \title{TOTEM Detectors}
@@ -469,66 +473,94 @@ $\Rightarrow$ need further alignment step
 \vskip0pt plus0.5fil
 \line{\hss\fig[,3cm]{fig/topology_es.pdf}\hss}
 
+\line{\vtop{\hsize8cm
 \> interesting process on its own
-\> two anti-collinear protons $\Rightarrow$ excellent tool for alignment, understanding detector effects, optics, etc.
-\> TODO: definition of, $t$, $\th$, $\phi$
+\> two anti-collinear protons $\Rightarrow$ excellent tool for
+\>> alignment
+\>> understanding detector effects
+\>> optics tuning, etc.
+}\hskip10mm\vtop{\hsize6cm
+\> $\th$: scattering angle
+\> $\ph$: azimuthal angle
+\> $t$: four-momentum transfer squared
+$$t \simeq - p^2 \th^2$$
+}\hss}
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Elastic scattering}
 \title{Pre-TOTEM status}
 
-\> pre-TOTEM situation -- models with large differences
-\>> different t regions -- probing different physics/QCD regimes
+\> theoretical/phenomenological models: very different predictions at larger $|t|$
 
-\line{\hss\fig[9cm]{fig/es_models.pdf}\hss}
+\vfil
+\line{\hss\fig[14cm]{fig/es_models.pdf}\hss}
+
+\vfil
+\> different $|t|$ regions: different scattering mechanisms/QCD regimes
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Elastic scattering}
 \title{Analysis}
 
-\> entirely data-driven
+\vskip-3mm
 
-{\itskip0mm
+\line{\vbox{\hsize10cm
+\itskip0mm
 \itindent7mm
+
+\centerline{\Em{entirely data-driven}}
+\vskip1mm
 
 \noindent\cYe{\bf 1. Kinematics reconstruction}\cFg
 
-\> proton tracks in RPs $\mathop{\longrightarrow}\limits^{\hbox{inverse optics}}$ proton kinematics at IP
-\> xi  = 0 --> relatively easy
+\> tracks in RPs $\mathop{\longrightarrow}$ kinematics at IP ($\xi = 0$ $\Rightarrow$ relatively easy)
+\> choice of formulae $\rightarrow$ minimisation of systematics
 
-\vfil
+\vskip1mm
 \noindent\cYe{\bf 2. Elastic tagging}\cFg
 
-\> elastic event = 2 anti-collinear protons from the same vertex $\Rightarrow$ compare left and right reconstructed protons
-\> each proton $\xi \approx 0$ $\Rightarrow$ correlation hit position vs.~track angle at RPs
+\> angles left = angles right, vertex left = vertex right
+\> protons $\xi \approx 0$ $\Rightarrow$ correlation hit position vs.~track angle at RPs
 
-\vfil
-\noindent\cYe{\bf 3. Acceptance corrections}\cFg
+\vskip1mm
+\noindent\cYe{\bf 3. Background subtraction}\cFg
+
+\vskip1mm
+\noindent\cYe{\bf 4. Acceptance corrections}\cFg
 
 \> RP sensors have finite size, LHC apertures
 \> azimuthal symmetry $\Rightarrow$ geometrical correction (+ smearing around edges)
 
-\vfil
-\noindent\cYe{\bf 4. Unfolding of resolution effects}\cFg
+\vskip1mm
+\noindent\cYe{\bf 5. Unfolding of resolution effects}\cFg
 
-\> angular resolution from data (compare left and right protons) 
-\> Monte Carlo $\Rightarrow$ impact on $t$-distribution
+\> angular resolution: left-right proton comparison
+\> Monte Carlo calculation $\Rightarrow$ impact on $t$-distribution
 
-\vfil
-\noindent\cYe{\bf 5. Inefficiency corrections}\cFg
+\vskip1mm
+\noindent\cYe{\bf 6. Inefficiency corrections}\cFg
 
-\> uncorrelated one-RP inefficiencies
+\> 3-out-of-4 efficiency
 \> near-far correlated RP inefficiencies
 \> ``pile-up'' = elastic event + another track in a RP
 
-\vfil
-\noindent\cYe{\bf 6. Luminosity}\cFg
+\vskip1mm
+\noindent\cYe{\bf 7. Luminosity}\cFg
 
 \> from CMS (if available), uncertainty $\approx 4\%$
-\> from TOTEM (see later -- TODO)
-}
+\> from TOTEM (details later on)
+}\hskip3mm\vbox{\hsize5.1cm
 
-\> FIG: illustrations for the most important steps
+\centerline{{\bf\cOr$\th_x^*$ collinearity\cFg}}
+
+\fig[5cm]{fig/cuts_th_x_L_vs_th_x_R.pdf}
+
+\vskip5mm
+
+\centerline{{\bf\cOr acceptance correction\cFg}}
+
+\fig[5cm]{fig/acc_corr_phi_lab.pdf}
+}\hss}
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Elastic scattering}
@@ -561,37 +593,90 @@ $\Rightarrow$ need further alignment step
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Elastic scattering}
-\title{Trends}
+\title{First conclusions}
 
-\> compare to older data: trends (peak shrinking and diff. min move) confirmed
+\vskip-3mm
 
+\line{\raise12mm\vbox{\hsize6.7cm
+\> no theoretical/phenomenological model describes completely TOTEM data
 
-\line{\hss\fig[3cm]{fig/dcs_older_experiments1.png}\hss}
+\> at low $|t|$: nearly exponential decrease
+$${\d\si\over \d t} \approx \e^{-B |t|}$$
+
+}\hss\fig[,5cm]{fig/es_results_7_mod.pdf}\hss}
+
+\line{\raise17mm\vbox{\hsize5cm
+\> previously observed trends\\ confirmed: as $\sqrt{s}$ grows
+\>> \Em{``forward peak'' shrinks}\\
+$\Rightarrow$ minimum moves to lower values
+\>> \Em{intercept at $t = 0$ increases}\\
+$\Rightarrow$ related to $\si_{\rm tot}$ increase
+\>> \Em{forward slope $B$ increases}
+}\hskip2mm\fig[,5cm]{fig/dcs_older_experiments1.png}\hskip1mm\fig[,5cm]{fig/es_B_s.pdf}\hss}
+
+%\line{\hss\fig[,4cm]{fig/dcs_older_experiments1.png}\hss\fig[,4cm]{fig/es_B_s.pdf}\hss}
 %\line{\hss\fig[3cm]{fig/dcs_older_experiments2.png}\hss}
 
-\line{\hss\fig[3cm]{fig/es_B_s.pdf}\hss}
-
-\line{\hss\fig[3cm]{fig/es_results_7_mod.pdf}\hss}
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Elastic scattering}
 \title{Very low $|t|$: Coulomb-hadronic interference}
 
-\> low $|t|$ possible due to
+\vskip-3mm
+
+\> $|t|$ as low as $6\cdot10^{-4}\un{GeV^2}$ accessible thanks to
 \>> $\be^* = 1000\un{m}$ optics: large effective lengths, low beam divergence ($\approx 0.5\un{\mu rad}$)
-\>> RPs approach to $3\un{\si_{\rm beam}}$ from beam
+\>> RPs approach of $3\un{\si_{\rm beam}}$ from beam
+
+\vfil
+\line{\hss\fig[8cm]{fig/plotFitExampleComponents.pdf}\hss}
 
 \> interesting aspects
-\>> Coulomb-hadronic interference $\Rightarrow$ determination of hadronic phase
-\>> Coulomb/hadronic separation $\Rightarrow$ hadronic extrapolation to $t = 0$ $\Rightarrow$ total-cross section implications via optical theorem
+\>> Coulomb-hadronic interference $\Rightarrow$ \Em{determination of phase} of hadronic amplitude
+\>> Coulomb/hadronic separation $\Rightarrow$ hadronic extrapolation to $t = 0$\\
+$\Rightarrow$ \Em{total-cross section implications} via optical theorem
 
-$$\si_{\rm tot} \propto \Im {\cal A_{\rm el}}(t = 0)$$
+\vskip-2mm
+$$\cYe\si_{\rm tot} \propto \Im {\cal A_{\rm el}}(t = 0)\cFg$$
 
-\line{\hss\fig[3cm]{fig/plotFitExampleComponents.pdf}\hss}
+\vfil
 
-\> theory
-\> analysis -- mention key elements
-\> preliminary result
+\newpage %-------------------------------------------------------------------------------------------
+\context{Elastic scattering}
+\title{Hadronic phase: first results}
+
+\noindent\EM{Theory}
+
+\line{\hss\raise2mm\vbox{\hsize5.5cm
+$${\d\si\over \d t} \propto |{\cal A}^{\rm C+H}|^2$$
+
+$${\cal A}^{\rm C+H} = \hbox{COMBINATION}({\cal A^{\rm C}}, {\cal A}^{\rm H})$$
+}\hskip3mm\AddBckg[1mm]{\fig[,1.8cm]{fig/el_diagrams.pdf}}\hss}
+
+\> \Em{COMBINATION}: 2 theoretical alternatives
+\> \Em{${\cal A}^{\rm C}$}: well known
+\> \Em{${\cal A}^{\rm H}$}
+\>> \Em{modulus}: constrained by TOTEM data $\Rightarrow$ parametrised $\exp(Bt + \ldots)$
+\>> \Em{phase}: test a range of theoretical predictions
+
+
+\vfil
+
+
+\line{\vbox{\hsize9cm
+\noindent\EM{Fits}
+
+\> various fit metrics: generalised $\ch^2$, Kolmogorov-like
+
+\> combination of choices: little impact on the fit
+
+\> very PRELIMINARY result
+
+$$\rh = \left. {\Re {\cal A^{\rm H}}\over \Im {\cal A}^{\rm H}}\right |_{t = 0} =
+0.110 \pm 0.027^{\rm (stat)} \pm 0.010^{\rm (syst)}\ \hbox{}^{\hbox to 7pt{\hss+\hss} 0.013}_{\hbox to 7pt{\hss-\hss} 0.012}\ \hbox{}^{\rm (model)}
+$$
+
+}\hskip3mm\vbox{\vskip-5mm\fig[,5cm]{fig/rho.pdf}}\hss}
 
 \newpage %-------------------------------------------------------------------------------------------
 \hbox{}
@@ -606,29 +691,89 @@ $$\si_{\rm tot} \propto \Im {\cal A_{\rm el}}(t = 0)$$
 \context{Total cross-section}
 \title{Pre-TOTEM status}
 
-\line{\hss\fig*[3cm]{fig/compete2002_sigma_tot.pdf}\hss}
+\line{\hss various $\si_{\rm tot}$ extrapolations by COMPETE\hss}
+%\line{\hss\fig*[10cm]{fig/compete2002_sigma_tot.pdf}\hss}
+\line{\hss\fig*[8.5cm]{fig/sigma,tot.pdf}\hss}
 
-\> different extrapolations
+\vfil
+\> various models/theories:
+$$\si_{\rm tot} \sim \log s\ ,\qquad \si_{\rm tot} \sim \log^2 s\ ,\qquad \si_{\rm tot} \sim s^{\al - 1}$$
 
+\> predictions for $\sqrt{s} = 14\un{TeV}$
+$$90\un{mb} < \si_{\rm tot} < 130\un{mb} \Rightarrow 40\un{\%}\hbox{ uncertainty}$$
+
+
+\> available data not decisive (incompatible CDF/E810 measurements)
+
+\vfil
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Total cross-section}
 \title{Methods}
 
-\> TODO
+\vskip-5mm
 
-\line{\hss\fig[10cm]{fig/tot_cs_methods.pdf}\hss}
+\> consequence of optical theorem
+
+$$\si_{\rm tot}^2 \propto \left[ \Im {\cal A}_{\rm el}(t = 0) \right]^2 = {1\over 1 + \rh^2} |{\cal A_{\rm el}}(t = 0)|^2 \propto
+{1\over 1 + \rh^2} \left. \d\si_{\rm el}\over \d t \right|_{t=0}
+$$
+
+
+\vfil
+\> 3 methods available
+\vskip2mm
+\line{\hss\fig[11cm]{fig/tot_cs_methods.pdf}\hss}
+
+\vfil
+\> $\rh$ value from TOTEM or from an external source, e.g.~COMPETE
+\>> enters as $1+\rh^2$ $\Rightarrow$ limited impact
+
+\vfil
+\> by-product: by method combination luminosity $\cal L$ can be determined
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Total cross-section}
 \title{Inelastic cross-section measurement}
 
-\> TODO
+\vskip-3mm
+\centerline{[EPL 101 (2013) 21003]}
+
+\vfil
+\> T2 sees $\approx 95\un{\%}$ of inelastic events (enough to detect 1 track!)
+
+\vfil
+\noindent 1) \cYe{\bf Raw rate}\cFg: event counting with T2
+
+\vskip2mm
+\line{\hskip10mm\vtop{\hsize6cm
+\noindent$\downarrow$ \em{experimental corrections}:
+}\hskip1mm\vtop{\hsize8cm
+\noindent trigger and reconstruction inefficiencies, beam-gas event suppression, pile-up consideration
+}\hss}
+\vskip2mm
+
+\noindent 2) \cYe{\bf Visible rate}\cFg: visible with T2 in perfect conditions
+
+\vskip2mm
+\line{\hskip10mm\vtop{\hsize6cm
+\noindent$\downarrow$ \em{recovery of events with no tracks in T2}:
+}\hskip1mm\vtop{\hsize8cm
+\noindent T1-only events, events with gap over T2, low-mass diffraction
+}\hss}
+\vskip2mm
+
+\noindent 3) \cYe{\bf Physics rate}\cFg: true rate of inelastic events
+
+\vfil
+\> only one major Monte-Carlo-based correction: \Em{low-mass diffraction}\\
+$\Rightarrow$ but can be constrained from data
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Total cross-section}
 \title{Results}
 
+\vskip-3mm
 
 \line{%
 	\hss
@@ -637,6 +782,9 @@ $$\si_{\rm tot} \propto \Im {\cal A_{\rm el}}(t = 0)$$
 		\centerline{\SmallerFonts[EPL 101 (2013) 21004]}
 		\vskip3mm
 		\line{\hss\fig{fig/tot_cs_methods_res7.pdf}\hss}
+		\> low mass diffraction
+		\vskip0mm
+		$$\si_{\rm inel}^{|\et| > 6.5} = \si_{\rm tot}^{EOO} - \si_{\rm el}^{EOO} - \si_{\rm inel}^{\rm visible} = (2.6 \pm 2.2)\un{mb}$$
 	}%
 	\hskip2mm
 	\vrule
@@ -646,7 +794,7 @@ $$\si_{\rm tot} \propto \Im {\cal A_{\rm el}}(t = 0)$$
 		\centerline{\SmallerFonts[CERN-PH-EP-2012-354]}
 		\vskip3mm
 		\line{\hss\fig{fig/tot_cs_methods_res8.pdf}\hss}
-		\centerline{\SmallerFonts(CMS luminosity unavailable)}
+		\centerline{(greyed: CMS luminosity unavailable)}
 	}%
 	\hss
 }
@@ -656,6 +804,7 @@ $$\si_{\rm tot} \propto \Im {\cal A_{\rm el}}(t = 0)$$
 \title{Results in context}
 
 \line{\hss\fig[14cm]{fig/sigma_tot_el_inel_cmp_big.pdf}\hss}
+
 
 
 \newpage %-------------------------------------------------------------------------------------------
@@ -758,7 +907,7 @@ $$m_X \ge 3.4\un{GeV}$$
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Single diffraction}
-\title{Analysis steps}
+\title{Analysis I}
 
 \> available data: $\sqrt s = 7$ and $8\un{TeV}$, $\be^* = 90\un{m}$ (proton in vertical RPs)
 \>> 7 TeV analysis used here for illustration
@@ -769,21 +918,23 @@ $$m_X \ge 3.4\un{GeV}$$
 
 \> four RP combinations (left/right $\times$ top/bottom) $\Rightarrow$ each analysed separately $\Rightarrow$ confidence
 
-\> background: pile-up
+\> background -- pile-up:
 
 \centerline{beam halo (RP) + inelastic (T1/2) \hskip10mm or \hskip10mm SD/DPE (RP) + inelastic (T1/2)}
 
 $\Rightarrow$ proton and inelastic products independent
 
-$\Rightarrow$ subtraction method: TODO
+$\Rightarrow$ background estimation: events with proton on the ``wrong'' side
 
-\line{\hss\fig[9cm]{fig/topology_sd_T1_opp_bckg.pdf}\hss}
+\vskip1mm
+\line{\hss\fig[10cm]{fig/topology_sd_T1_opp_bckg.pdf}\hss}
+\vskip1mm
 
 \>> complicated for class {T2 same arm}
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Single diffraction}
-\title{Analysis steps}
+\title{Analysis II}
 
 \vskip-7mm
 
@@ -816,7 +967,7 @@ $\Rightarrow$ T2: $2\cdot10^{-7} < \xi < 1\cdot 10^{-6}$
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Single diffraction}
-\title{Analysis steps}
+\title{First results}
 
 \vskip-5mm
 
@@ -842,10 +993,10 @@ $\Rightarrow$ T2: $2\cdot10^{-7} < \xi < 1\cdot 10^{-6}$
 
 \> very preliminary
 
-$$\si_{\rm SD}(3.4 < m_X < 1100\un{GeV}) = (6.5 \pm 1.3)\un{mb}\ ,\qquad \si_{\rm SD}(m_X < 3.4\un{GeV}) = \O{3\un{mb}} \hbox{TODO: verify, ref}$$
+$$\si_{\rm SD}(3.4 < m_X < 1100\un{GeV}) = (6.5 \pm 1.3)\un{mb}\ ,\qquad \si_{\rm SD}(m_X < 3.4\un{GeV}) = \O{2.5\un{mb}}$$
 % for T2 same: about 1 to 2 mb
 
-\> in progress: xi and t double differential distribution (Ken?)
+\> final goal: $\xi$ and $t$ double-differential distribution
 
 \newpage %-------------------------------------------------------------------------------------------
 \hbox{}
@@ -995,7 +1146,7 @@ $$m_X \approx \sqrt{s\xi_1 \xi_2}$$
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Central diffraction -- TOTEM + CMS}
-\title{TODO}
+\title{Combined TOTEM+CMS analyses}
 
 \> TOTEM and CMS independent experiments -- common runs need:
 \>> exchange of triggers (TOTEM developed a faster electrical trigger)
@@ -1042,16 +1193,11 @@ $\Rightarrow$ $90\un{m}$ optics with more bunches or low-$\be^*$ optics
 
 \newpage %-------------------------------------------------------------------------------------------
 \hbox{}
-\vfil
+\vfill
 \title{Forward charged-particle multiplicities}
 
-% TODO: a figure
 
-
-\newpage %-------------------------------------------------------------------------------------------
-\context{Forward charged-particle multiplicities}
-\title{TODO}
-
+\vfill
 \> $\d N_{\rm ch} / \d\et$ : mean number of charged particles per event and per unit of pseudorapidity
 
 \> probes (non-)perturbative strong interactions and hadronisation 
@@ -1065,6 +1211,8 @@ $\Rightarrow$ $90\un{m}$ optics with more bunches or low-$\be^*$ optics
 \>> still $\approx 95\un{\%}$ of inelastic events seen
 \>> almost all non-diffractive events visible
 \>> almost all diffraction with $m_X \gs 3.4\un{GeV}$ detected
+
+\vskip0pt plus0.1fill
 
 \newpage %-------------------------------------------------------------------------------------------
 \context{Forward charged-particle multiplicities}
@@ -1157,19 +1305,46 @@ $$
 \> in future: also correlations left/centre/right
 
 \newpage %-------------------------------------------------------------------------------------------
-\title{Summary \& Outlook}
+\title{Upgrade plans}
 
-\noindent \EM{Summary}
-
-TODO: make a summary
-
-\vfil
-\noindent \EM{Outlook}
+TODO:
 
 RP upgrade --> to cope with pile-up
 
 \> multiple tracks in RPs per event --> pixels or a 3rd rotated RP
 \> timing detector --> match RP tracks with CMS vertices
+
+\newpage %-------------------------------------------------------------------------------------------
+\title{Summary}
+
+\noindent\Em{Number of results published}
+
+\> elastic differential cross-section ($\sqrt s = 7\un{TeV}$)
+\> total, elastic and inelastic cross-section ($\sqrt s = 7$ and $8\un{TeV}$)
+\> forward charged-particle pseudorapidity density ($\sqrt s = 7\un{TeV}$)
+
+\vfil
+\noindent\Em{Number of analyses in progress, some of them combined with CMS}
+
+\> double diffraction ($\sqrt s = 7$ and $8\un{TeV}$)
+\> low-$|t|$ elastic cross-section and Coulomb-interference ($\sqrt s = 8\un{TeV}$)
+\> elastic differential cross-section ($\sqrt s = 8\un{TeV}$)
+\> forward charged-particle pseudorapidity density ($\sqrt s = 8\un{TeV}$), with CMS
+\> single diffraction ($\sqrt s = 7$ and $8\un{TeV}$)
+\> central diffraction, soft and hard ($\sqrt s = 7$ and $8\un{TeV}$), some with CMS
+
+
+\vfil
+\noindent\Em{More data available}
+
+\> $\rm p + p$ data at $\sqrt s = 2.76\un{TeV}$
+\> $\rm p + A$ data
+
+
+
+\vfil
+\noindent\Em{Roman Pot upgrade ongoing}
+\> preparation for higher luminosities (higher pile-up)
 
 \vfil
 \eject
